apps/istio/gateway.yaml
apiVersion: networking.istio.io/v1beta1
kind: Gateway

metadata:
  name: nginx-gateway
  namespace: istio-system

spec:

#  selector:
#    istio: ingressgateway
  type: NodePort
  
#  servers:
#
#    - port:
#        number: 80
#        name: http
#        protocol: HTTP
#
#      hosts:
#        - prod.example.local
#        - dev.example.local
  ports:
    - name: http
      port: 80
      targetPort: 8080
      nodePort: 30000
 
  selector:
    istio: ingressgateway
