apps/istio/virtualservice-dev.yaml
apiVersion: networking.istio.io/v1
kind: VirtualService

metadata:
  name: nginx-dev
  namespace: dev

spec:

  hosts:
    - dev.example.local

  gateways:
    - istio-system/nginx-gateway

  http:

    - route:

        - destination:

            host: nginx-dev-service.dev.svc.cluster.local

            port:
              number: 81
